# gemini-golf-coach

./: .replit  app.py  ball.py  golf_analyzer.py  golf_config.py  hybrid_golf_coach.py  pyproject.toml  realtime_golf_coach.py  report_generator.py  swing_data.json  swing_phase_detector.py  video_manager.py  video_processor.py
attached_assets/: Refined_Golf_Swing_Feedback_Script_Bank__10th_Grade_Advanced_Tone__1752085164319.csv
output/: swing_analysis_report.md
templates/: index.html  realtime.html
